# QtNetworkCrumbs

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: CMakeLists.txt
.github/actions/: CMakeLists.txt
.github/actions/enable-qt-tools/: action.js  action.yaml
.github/workflows/: integration.yaml  run-ctest.yaml
cmake/: QncMacros.cmake
core/: CMakeLists.txt  abstractresolver.cpp  abstractresolver.h  compat.h  detailmodel.cpp  detailmodel.h  literals.cpp  literals.h  multicastresolver.cpp  multicastresolver.h  parse.cpp  parse.h  treemodel.cpp  treemodel.h
http/: CMakeLists.txt  compressingserver.cpp  httpparser.cpp  httpparser.h
mdns/: CMakeLists.txt  mdnshostlistmodel.cpp  mdnshostlistmodel.h  mdnsliterals.cpp  mdnsliterals.h  mdnsmessage.cpp  mdnsmessage.h  mdnsmodeldemo.cpp  mdnsmodelsupport.cpp  mdnsmodelsupport.h  mdnsresolver.cpp  mdnsresolver.h  mdnsresolverdemo.cpp  mdnsservicelistmodel.cpp  mdnsservicelistmodel.h  mdnsurlfinder.cpp  mdnsurlfinder.h  servicediscovery.cpp  windnstest.cpp
qnc/: CMakeLists.txt  qncliterals.cpp  qncliterals.h  qncparse.cpp  qncparse.h  qncresolver.cpp  qncresolver.h
ssdp/: CMakeLists.txt  ssdpresolver.cpp  ssdpresolver.h  ssdpresolverdemo.cpp
tests/auto/: CMakeLists.txt  qnctestsupport.cpp  qnctestsupport.h  test-runner.cmd.in  tst_coremodels.cpp  tst_coreparse.cpp  tst_httpparser.cpp  tst_mdnsmessages.cpp  tst_mdnsmodels.cpp  tst_mdnsresolver.cpp  tst_qncparse.cpp  tst_ssdpresolver.cpp  tst_xmlparser.cpp
tests/manual/: CMakeLists.txt  upnpparsertest.cpp
upnp/: CMakeLists.txt  upnpresolver.cpp  upnpresolver.h  upnpresolverdemo.cpp  upnptreemodel.cpp  upnptreemodel.h  upnpviewer.cpp
xml/: CMakeLists.txt  xmlparser.cpp  xmlparser.h
